# developtools_packing_tool

./: .gitignore  BUILD.gn  OAT.xml  README.en.md  README.md  README_zh.md  build.py  bundle.json  checkTool.sh  et --hard backup-before-filter  haptobin.sh  packingTool.sh  packingtool.gni  unpackingTool.sh
apt/frameworks/: BUILD.gn
apt/frameworks/include/: app_packager.h  constants.h  hap_packager.h  hsp_packager.h  packager.h  shell_command.h
apt/frameworks/src/: app_packager.cpp  hap_packager.cpp  hsp_packager.cpp  packager.cpp  shell_command.cpp
modulecheck/: BUILD.gn  agentCard.json  app.json  appStartup.json  appStartupInner.json  arkDataSchema.json  commonEvents.json  configuration.json  crossAppSharedConfig.json  customUtds.json  distroFilter.json  forms.json  insightIntent.json  insightIntentInner.json  menu.json  module.json  pages.json  routerMap.json  shareFiles.json  shortcuts.json  startWindow.json  themeConfig.json
packing_tool/frameworks/: BUILD.gn
packing_tool/frameworks/include/: app_log_wrapper.h  app_packager.h  appqf_packager.h  constants.h  fast_app_packager.h  general_normalize.h  hap_packager.h  hqf_packager.h  hqf_verify.h  hsp_packager.h  incremental_pack.h  log.h  multiapp_packager.h  package_normalize.h  packager.h  res_packager.h  scan_statdulpicate.h  shell_command.h  skill_pack_helper.h  unzip_wrapper.h  utils.h  version_normalize.h  zip_constants.h  zip_utils.h  zip_wrapper.h
packing_tool/frameworks/include/dedup/: dedup_error.h  dedup_log.h  device_calculator.h  exact_solver.h  greedy_solver.h  module_calculator.h  report_generator.h  so_deduplicator.h  so_info.h
packing_tool/frameworks/include/error/: error_msg.h  packing_tool_err_msg.h  scan_error_enum.h
packing_tool/frameworks/include/json/: dependency_item.h  distro_filter.h  general_normalize_version.h  general_normalize_version_utils.h  hap_verify_info.h  hap_verify_utils.h  hqf_info.h  json_utils.h  module_api_version.h  module_json.h  module_json_utils.h  module_metadata_info.h  multi_app_mode.h  normalize_version.h  normalize_version_utils.h  pack_info.h  pack_info_utils.h  patch_json.h  patch_json_utils.h  preload_item.h  pt_json.h  version.h
packing_tool/frameworks/src/: app_packager.cpp  appqf_packager.cpp  fast_app_packager.cpp  general_normalize.cpp  hap_packager.cpp  hqf_packager.cpp  hqf_verify.cpp  hsp_packager.cpp  incremental_pack.cpp  log.cpp  main.cpp  multiapp_packager.cpp  package_normalize.cpp  packager.cpp  res_packager.cpp  scan_statdulpicate.cpp  shell_command.cpp  skill_pack_helper.cpp  unzip_wrapper.cpp  utils.cpp  version_normalize.cpp  zip_utils.cpp  zip_wrapper.cpp
packing_tool/frameworks/src/dedup/: device_calculator.cpp  exact_solver.cpp  greedy_solver.cpp  module_calculator.cpp  report_generator.cpp  so_deduplicator.cpp
packing_tool/frameworks/src/error/: error_msg.cpp  packing_tool_err_msg.cpp  scan_error_enum.cpp
packing_tool/frameworks/src/json/: distro_filter.cpp  general_normalize_version_utils.cpp  hap_verify_info.cpp  hap_verify_utils.cpp  json_utils.cpp  module_json.cpp  module_json_fa.cpp  module_json_stage.cpp  module_json_utils.cpp  normalize_version_utils.cpp  pack_info.cpp  pack_info_utils.cpp  patch_json.cpp  patch_json_utils.cpp  pt_json.cpp
packing_tool/frameworks/test/unittest/: BUILD.gn
packing_tool/frameworks/test/unittest/app_packager_test/: BUILD.gn  app_packager_test.cpp
packing_tool/frameworks/test/unittest/app_packager_test/appPackagerHapTest/: BUILD.gn
packing_tool/frameworks/test/unittest/app_packager_test/appPackagerHspTest/: BUILD.gn
packing_tool/frameworks/test/unittest/app_packager_test/app_packager_file/: com.test.apppackagertest.csr  pack.info  pack.res
packing_tool/frameworks/test/unittest/app_packager_test/mock/: mock_module_json_utils.cpp  mock_module_json_utils.h
packing_tool/frameworks/test/unittest/appqf_packager_test/: BUILD.gn  appqf_packager_test.cpp
packing_tool/frameworks/test/unittest/dedup/: BUILD.gn  device_calculator_test.cpp  exact_solver_test.cpp  greedy_solver_test.cpp  module_calculator_test.cpp  pack_info_parser_test.cpp  report_generator_test.cpp
packing_tool/frameworks/test/unittest/dedup/device_calculator_test/: BUILD.gn
packing_tool/frameworks/test/unittest/dedup/exact_solver_test/: BUILD.gn
packing_tool/frameworks/test/unittest/dedup/greedy_solver_test/: BUILD.gn
packing_tool/frameworks/test/unittest/dedup/module_calculator_test/: BUILD.gn
packing_tool/frameworks/test/unittest/fast_app_packager_test/: BUILD.gn  fast_app_packager_test.cpp
packing_tool/frameworks/test/unittest/general_normalize_test/: BUILD.gn  general_normalize_test.cpp
packing_tool/frameworks/test/unittest/hap_packager_test/: BUILD.gn  hap_packager_test.cpp
packing_tool/frameworks/test/unittest/hqf_packager_test/: BUILD.gn  hqf_packager_test.cpp
packing_tool/frameworks/test/unittest/hqf_verify_test/: BUILD.gn  hqf_verify_test.cpp
packing_tool/frameworks/test/unittest/hsp_packager_test/: BUILD.gn  hsp_packager_test.cpp
packing_tool/frameworks/test/unittest/multiapp_packager_test/: BUILD.gn  multiapp_packager_test.cpp
packing_tool/frameworks/test/unittest/ohos_test/: BUILD.gn  ohos_test.xml
packing_tool/frameworks/test/unittest/package_normalize_test/: BUILD.gn  package_normalize_test.cpp
packing_tool/frameworks/test/unittest/packager_test/: BUILD.gn  packager_test.cpp
packing_tool/frameworks/test/unittest/res_packager_test/: BUILD.gn  res_packager_test.cpp
packing_tool/frameworks/test/unittest/shell_command_test/: BUILD.gn  shell_command_test.cpp
packing_tool/frameworks/test/unittest/skill_test/: BUILD.gn  skill_test.cpp
packing_tool/frameworks/test/unittest/unzip_wrapper_test/: BUILD.gn  unzip_wrapper_test.cpp
packing_tool/frameworks/test/unittest/utils_Test/: BUILD.gn  utils_test.cpp
packing_tool/frameworks/test/unittest/version_normalize_test/: BUILD.gn  version_normalize_test.cpp
packing_tool/frameworks/test/unittest/zip_utils_test/: BUILD.gn  zip_utils_test.cpp
packing_tool/frameworks/test/unittest/zip_wrapper_test/: BUILD.gn  zip_wrapper_test.cpp
(+240 files in other folders)
