# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_prebuilt_etc("etc_file_packing") {
  source = "jar/hmos_app_packing_tool.jar"
  module_install_dir = "jar"
  part_name = "developtools_packing_tool"
}

ohos_prebuilt_etc("etc_file_unpacking") {
  source = "jar/hmos_app_unpacking_tool.jar"
  module_install_dir = "jar"  
  part_name = "developtools_packing_tool"
}
}
