# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/python.gni")
import("//build/templates/metadata/module_info.gni")

template("packing_tool") {
  action_with_pydeps(target_name) {
    forward_variables_from(invoker,
                           [
                             "sources",
                             "outputs",
                           ])
    script = "//developtools/packing_tool/build.py"
    args = [
      "--haptobin",
      rebase_path(sources[0], root_build_dir),
      "--haptobinOutput",
      rebase_path(outputs[0], root_build_dir),
      "--unpackOutput",
      rebase_path(outputs[1], root_build_dir),
      "--packOutput",
      rebase_path(outputs[2], root_build_dir),
      "--outpath",
      rebase_path(outputs[3], root_build_dir),
    ]
  }
}
