# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_executable("apt") {
    include_dirs = [
        "include",
    ]
    sources = [
        "src/main.cpp",
        "src/shell_command.cpp",
        "src/packager.cpp",
        "src/hap_packager.cpp",
        "src/hsp_packager.cpp",
        "src/app_packager.cpp"
    ]
    configs = []
    cflags = []
    external_deps = [
        "c_utils:utils",
        "hilog:libhilog",
        "json:nlohmann_json_static",
        "zlib:libz",
    ]
    install_enable = false
    subsystem_name = "developtools"
    part_name = "packing_tool"
}

ohos_group("ohos_packing_tool") {
    deps = [
        ":apt"
    ]
}