# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")
import("//build/ohos.gni")

config("ohos_packing_tool_config") {
  include_dirs = [
    "include",
    "include/json",
  ]

  cflags_cc = [ "-fexceptions" ]
  cflags_objcc = cflags_cc
}

ohos_executable("ohos_packing_tool") {
  public_configs = [ ":ohos_packing_tool_config" ]
  sources = [
    "src/app_packager.cpp",
    "src/fast_app_packager.cpp",
    "src/hap_packager.cpp",
    "src/hsp_packager.cpp",
    "src/json/distro_filter.cpp",
    "src/json/hap_verify_info.cpp",
    "src/json/hap_verify_utils.cpp",
    "src/json/json_utils.cpp",
    "src/json/module_json.cpp",
    "src/json/module_json_fa.cpp",
    "src/json/module_json_stage.cpp",
    "src/json/module_json_utils.cpp",
    "src/json/normalize_version_utils.cpp",
    "src/json/pack_info.cpp",
    "src/json/pack_info_utils.cpp",
    "src/json/patch_json.cpp",
    "src/json/patch_json_utils.cpp",
    "src/json/pt_json.cpp",
    "src/log.cpp",
    "src/main.cpp",
    "src/multiapp_packager.cpp",
    "src/packager.cpp",
    "src/shell_command.cpp",
    "src/unzip_wrapper.cpp",
    "src/utils.cpp",
    "src/zip_utils.cpp",
    "src/zip_wrapper.cpp",
  ]
  configs = []
  cflags = []
  external_deps = [
    "hilog:libhilog",
    "openssl:libcrypto_shared",
    "zlib:libz",
  ]
  if (defined(ohos_lite)) {
    deps = [
      "//build/lite/config/component/cJSON:cjson_static",
      "//third_party/bounds_checking_function:libsec_static",
    ]
  } else {
    external_deps += [
      "bounds_checking_function:libsec_static",
      "cJSON:cjson_static",
    ]
  }
  install_enable = false
  subsystem_name = "developtools"
  part_name = "packing_tool"
}
