# Copyright (c) 2024-2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")
import("//build/ohos.gni")

config("ohos_packing_tool_config") {
  include_dirs = [
    "include",
    "include/json",
  ]

  cflags_cc = [
    "-fexceptions",
    "-fstack-protector-strong",
  ]
  cflags_objcc = cflags_cc
}

ohos_executable("ohos_packing_tool") {
  branch_protector_ret = "pac_ret"

  sanitize = {
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
    integer_overflow = true
    ubsan = true
  }

  public_configs = [ ":ohos_packing_tool_config" ]
  sources = [
    "src/app_packager.cpp",
    "src/appqf_packager.cpp",
    "src/fast_app_packager.cpp",
    "src/general_normalize.cpp",
    "src/hap_packager.cpp",
    "src/hqf_packager.cpp",
    "src/hqf_verify.cpp",
    "src/hsp_packager.cpp",
    "src/json/distro_filter.cpp",
    "src/json/general_normalize_version_utils.cpp",
    "src/json/hap_verify_info.cpp",
    "src/json/hap_verify_utils.cpp",
    "src/json/json_utils.cpp",
    "src/json/module_json.cpp",
    "src/json/module_json_fa.cpp",
    "src/json/module_json_stage.cpp",
    "src/json/module_json_utils.cpp",
    "src/json/normalize_version_utils.cpp",
    "src/json/pack_info.cpp",
    "src/json/pack_info_utils.cpp",
    "src/json/patch_json.cpp",
    "src/json/patch_json_utils.cpp",
    "src/json/pt_json.cpp",
    "src/log.cpp",
    "src/main.cpp",
    "src/multiapp_packager.cpp",
    "src/package_normalize.cpp",
    "src/packager.cpp",
    "src/res_packager.cpp",
    "src/shell_command.cpp",
    "src/unzip_wrapper.cpp",
    "src/utils.cpp",
    "src/version_normalize.cpp",
    "src/zip_utils.cpp",
    "src/zip_wrapper.cpp",
  ]
  configs = []

  cflags = [ "-fstack-protector-strong" ]

  external_deps = [
    "openssl:libcrypto_shared",
    "zlib:libz",
  ]
  if (defined(ohos_lite)) {
    deps = [
      "//build/lite/config/component/cJSON:cjson_static",
      "//third_party/bounds_checking_function:libsec_static",
    ]
    if (ohos_kernel_type == "liteos_m") {
      include_dirs = [ "//base/hiviewdfx/hilog_lite/interfaces/native/kits" ]
      deps += [ "//base/hiviewdfx/hilog_lite/frameworks/mini:hilog_lite" ]
    } else {
      include_dirs =
          [ "//base/hiviewdfx/hilog_lite/interfaces/native/innerkits" ]
      deps += [ "//base/hiviewdfx/hilog_lite/frameworks/featured:hilog_shared" ]
    }
  } else {
    external_deps += [
      "bounds_checking_function:libsec_static",
      "cJSON:cjson_static",
      "hilog:libhilog",
    ]
  }
  install_enable = false
  subsystem_name = "developtools"
  part_name = "packing_tool"
}
