# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/test.gni")

group("unittest") {
  testonly = true
  deps = [
    "app_packager_test:unittest",
    "appqf_packager_test:unittest",
    "fast_app_packager_test:unittest",
    "hap_packager_test:unittest",
    "hqf_packager_test:unittest",
    "hqf_verify_test:unittest",
    "hsp_packager_test:unittest",
    "json/distro_filter_test:unittest",
    "json/hap_verify_utils_test:unittest",
    "json/json_utils_test:unittest",
    "json/module_json_test:unittest",
    "json/module_json_utils_test:unittest",
    "json/normalize_version_utils_test:unittest",
    "json/pack_info_test:unittest",
    "json/pack_info_utils_test:unittest",
    "json/patch_json_test:unittest",
    "json/patch_json_utils_test:unittest",
    "json/pt_json_test:unittest",
    "multiapp_packager_test:unittest",
    "package_normalize_test:unittest",
    "packager_test:unittest",
    "shell_command_test:unittest",
    "unzip_wrapper_test:unittest",
    "utils_Test:unittest",
    "version_normalize_test:unittest",
    "zip_utils_test:unittest",
    "zip_wrapper_test:unittest",
  ]
}
