# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/test.gni")

# SO去重功能测试组
group("dedup_tests") {
  testonly = true
  deps = [
    "device_calculator_test:unittest",
    "exact_solver_test:unittest",
    "greedy_solver_test:unittest",
    "module_calculator_test:unittest",
    "pack_info_parser_test:unittest",
    "report_generator_test:unittest",
  ]
}

# 所有去重相关测试
group("unittest") {
  testonly = true
  deps = [ ":dedup_tests" ]
}