# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_copy("copy_ohos_test") {
  subsystem_name = "developtools"
  part_name = "packing_tool"
  sources = [ "./ohos_test.xml" ]
  outputs = [ "$root_out_dir/tests/unittest/packing_tool/packing_tool/resource/ohos_test.xml" ]
}
