# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/test.gni")

config("device_calculator_test_config") {
  include_dirs = [
    "../../../../include",
    "../../../../include/json",
    "../../../../include/dedup",
    "../../../../include/error",
  ]

  cflags_cc = [ "-fexceptions" ]
  cflags_objcc = cflags_cc
}

module_output_path = "packing_tool/packing_tool"

ohos_unittest("device_calculator_test") {
  module_out_path = module_output_path
  public_configs = [ ":device_calculator_test_config" ]
  sources = [
    "../../../../src/dedup/device_calculator.cpp",
    "../../../../src/error/error_msg.cpp",
    "../../../../src/error/packing_tool_err_msg.cpp",
    "../../../../src/error/scan_error_enum.cpp",
    "../../../../src/json/distro_filter.cpp",
    "../../../../src/json/hap_verify_info.cpp",
    "../../../../src/json/module_json.cpp",
    "../../../../src/json/module_json_fa.cpp",
    "../../../../src/json/module_json_stage.cpp",
    "../../../../src/json/pt_json.cpp",
    "../../../../src/log.cpp",
    "../../../../src/utils.cpp",
    "../device_calculator_test.cpp",
  ]
  external_deps = [
    "bounds_checking_function:libsec_static",
    "cJSON:cjson_static",
    "hilog:libhilog",
    "openssl:libcrypto_shared",
    "zlib:libz",
  ]
}

group("unittest") {
  testonly = true
  deps = [ ":device_calculator_test" ]
}
